--- a/SASS/index.html
+++ b/SASS/index.html
@@ -14,12 +14,24 @@
         <ul>Services</ul>
     </div>
     <div class="div1">
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
-        <div class="div2"></div>
+        <div class="div2">
+            <p>It is the div 1</p>
+        </div>
+        <div class="div2">
+            <p>It is the div 2</p>
+        </div>
+        <div class="div2">
+            <p>It is the div 3</p>
+        </div>
+        <div class="div2">
+            <p>It is the div 4</p>
+        </div>
+        <div class="div2">
+            <p>It is the div 5</p>
+        </div>
+        <div class="div2">
+            <p>It is the div 6</p>
+        </div>
     </div>
 </body>
 </html>
